# NC-Calculator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  x.js
.github/workflows/: static.yml
app/: FissionOptApp.js  FissionOptApp.wasm  main.cpp  run.sh
cmake/: GenerateFuelManifest.cmake  GenerateHeatSinkManifest.cmake
config/: metadata.json
data/: components.json  heatsinks.json
src/: Bindings.cpp  Component.cpp  Component.h  Fission.cpp  Fission.h  FissionNet.cpp  FissionNet.h  OptFission.cpp  OptFission.h  Tile.cpp  Tile.h
web/: compile  compile.bat  compile.sh  components.json  fuel-presets.json  index.html  main.css  main.js  main.mjs
web/config/fission_fuel/: files.json
